tests/testcases/errors/BCE0072-2.boo
"""
BCE0072-2.boo(6,16): BCE0022: Cannot convert 'int' to 'string'.
"""
class Foo:
	override def ToString():
		return 3
